adjusted spacing issues

--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,15 @@
 /*Teacher section*/
+/* body {
+  background-color: black;
+  color: #fff;
+}
+
+nav i,
+nav a,
+nav p {
+  color: #fff;
+} */
+
 .teachers-container {
   flex-direction: column;
 }
@@ -108,7 +119,7 @@
 }
 .card {
   padding: 1.75rem 1.85rem;
-  background: #fff;
+  background: #f2f2f2;
   border-radius: 20px;
   margin: 0.9rem;
   position: relative;
@@ -162,7 +173,7 @@ h5 {
 
 @media only screen and (min-width: 1440px) {
   .teachers-list {
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     padding: 0rem 6rem;
   }
 
@@ -173,7 +184,7 @@ h5 {
 
 @media only screen and (min-width: 1646px) {
   .teachers-list {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     padding: 0rem 6rem;
   }
 
