--- a/css/program.css
+++ b/css/program.css
@@ -9,7 +9,7 @@
 }
 .container {
   width: 90%;
-  max-width: 100%;
+  max-width: 1250px;
   margin: 1rem 3.125rem 3rem 3.125rem;
 }
 
